--- a/striveboybiao-common/pom.xml
+++ b/striveboybiao-common/pom.xml
@@ -3,12 +3,23 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+
+    <!--使用sprinboot2.0  -->
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>2.1.4.RELEASE</version>
+        <relativePath/>
+    </parent>
+
+
     <groupId>com.zizhuling</groupId>
     <artifactId>striveboybiao-common</artifactId>
     <packaging>jar</packaging>
     <version>1.0-SNAPSHOT</version>
-    <name>striveboybiao-common Maven Webapp</name>
-    <url>http://maven.apache.org</url>
+    <name>striveboybiao-common </name>
+
+
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -38,7 +49,17 @@
 
     <dependencies>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+
         <!--java基本工具包-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>commons-lang</groupId>
             <artifactId>commons-lang</artifactId>
@@ -141,6 +162,7 @@
             <groupId>cn.afterturn</groupId>
             <artifactId>easypoi</artifactId>
             <version>4.2.0</version>
+            <type>pom</type>
         </dependency>
 
 
@@ -189,7 +211,8 @@
             <artifactId>hutool-all</artifactId>
             <version>${hutool-all.version}</version>
         </dependency>
-
-
     </dependencies>
+
+
+
 </project>
